@@ -29,8 +29,8 @@
 #
 # public:
 #	defined VARIABLE_NAME
-#	ifdef VARIABLE_NAME
-#	ifndef VARIABLE_NAME
+#   popd DIR
+#   pushd DIR
 #
 ################################################################################
 
@@ -48,11 +48,16 @@ defined() {
 	fi
 }
 
-readonly -f defined
-export -f defined
+pushd() {
+	builtin pushd ${@} > /dev/null
+}
 
-alias ifdef="if defined"
-alias ifndef="if ! defined"
+popd() {
+	builtin popd ${@} > /dev/null
+}
+
+readonly -f defined pushd popd
+export -f defined pushd popd
 
 
 ################################################################################
